--- a/Intro to API's.ipynb.ipynb
+++ b/Intro to API's.ipynb.ipynb
@@ -1284,11 +1284,9 @@
     "    if poke_type not in allthePokemon:\n",
     "        allthePokemon[poke_type] = []\n",
     "    allthePokemon[poke_type].append(\n",
-    "        {\n",
-    "            poke_data['name']:{\n",
+    "        {poke_data['name']:{\n",
     "                'abilites':[ability['ability']['name'] for ability in poke_data[\"abilities\"]],\n",
-    "                'weight':poke_data[\"weight\"]\n",
-    "            }})\n",
+    "                'weight':poke_data[\"weight\"]}})\n",
     "    \n",
     "    return allthePokemon\n",
     "\n",
@@ -1297,14 +1295,13 @@
     "    \n",
     "for number in poke_index:\n",
     "    makePokemon(number)\n",
-    "print(allthePokemon)\n",
-    "\n"
+    "print(allthePokemon)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a570959e",
+   "id": "18169998",
    "metadata": {},
    "outputs": [],
    "source": []
